[03:22] create environment for task: models, data, view

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Задача
+
 http://www.star-tex.ru/ задача - сделать распределение пунктов выпадающего меню по колонкам. Равномерно.
 
 Меню - в шапке, там где перечень из 5 ключевых разделов каталога: "Ткани одежные - Швейная фурнитура - Ткани для дома
@@ -11,3 +13,18 @@ http://www.star-tex.ru/ задача - сделать распределение
 
 Делить между разными колонками пункты на одну букву - конечно нельзя. Т.е. если на букву "Б" у нас 10 пунктов - то все
 10 либо в одной колонке, либо в другой.
+
+
+Язык программирования
+
+Python 3.5
+
+
+Зависимости
+
+requrements.txt
+
+
+Загрузка данных
+
+src$ ./manage.py menureplace columnize/menu/data/grab.yaml
